--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -11,7 +11,7 @@ jobs:
             - name: List and Read file
               run: |
                 echo "My first github action workflow"
-                ls ltra
+                ls -ltra
                 cat README.md
             - name: Generate ASCII Artwork
               run: cowsay -f tiger "Run for Cover, I am a TIGER....Saurav" >> tiger.txt
