--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -8,15 +8,11 @@ jobs:
         steps:
             - name: Checkout Repo
               uses: actions/checkout@v5
-            - name: Install Cowsay Program
-              run: sudo apt-get install cowsay -y
-            - name: Execute Cowsay CMD
-              run:  cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
-            - name: Test file exists
-              run:  grep -i "dragon" dragon.txt
-            - name: Read file
-              run:  cat dragon.txt
-            - name: Checkout Repo Files
-              run:  ls  
+
+            - name: List files
+              run: ls -ltra
+            - name: Execute shell script
+              run:  ./ascii-script.sh 
+  
 
             
