--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -11,8 +11,11 @@ jobs:
 
             - name: List files
               run: ls -ltra
+
             - name: Execute shell script
-              run:  ./ascii-script.sh 
+              run: |
+                 chmod +x ascii-script.sh
+                 ./ascii-script.sh 
   
 
             
