Execute shell script

--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -14,8 +14,8 @@ jobs:
 
             - name: Execute shell script
               run: |
-                 chmod +x ascii-script.sh
-                 ./ascii-script.sh 
+                  chmod 444 ascii-script.sh
+                  ./ascii-script.sh 
   
 
             
