--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -14,7 +14,7 @@ jobs:
 
             - name: Execute shell script
               run: |
-                  chmod 444 ascii-script.sh
+                  chmod 444 ./ascii-script.sh
                   ./ascii-script.sh 
   
 
