--- a/.github/workflows/variables-secrets.yml
+++ b/.github/workflows/variables-secrets.yml
@@ -7,17 +7,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Docker Build
-        run: docker build -t docker.io/dockerUsername/imageName:latest
+        run: echo "docker build -t docker.io/dockerUsername/imageName:latest"
 
       - name: Docker login
-        run:  docker login --username=dockerUsername --password=s3cUrePaSsword
+        run:  echo "docker login --username=dockerUsername --password=s3cUrePaSsword"
 
       - name: Docker Publish
-        run:  docker push docker.io/dockerUsername/imageName:latest
+        run:  echo "docker push docker.io/dockerUsername/imageName:latest"
 
   Deploydocker:
     needs: Builddocker
     runs-on: latest ubuntu
     steps:
     -  name: Docker Run
-       run: docker run -d -p 8080:80 docker.io/dockerUsername/imageName:latest
+       run: echo "docker run -d -p 8080:80 docker.io/dockerUsername/imageName:latest"
